# vsomeip

./: .gitignore  CMakeLists.txt
documentation/: offer-stream.txt  tcp-traffic-stream.txt
examples/: .clang-format
examples/lidar/: CMakeLists.txt  client.cpp  lidar_ids.h  server.cpp  vsomeip.json
implementation/plugin/src/: plugin_manager_impl.cpp
implementation/runtime/include/: application_impl.hpp
implementation/service_discovery/include/: entry_impl.hpp
implementation/service_discovery/src/: configuration_option_impl.cpp  entry_impl.cpp  service_discovery_impl.cpp
